# vibe_pygo

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  test_example.py
src/vibe_python/: __init__.py  cli.py  config.py  core.py
tests/: test_vibe_python.py
