[project]
name = "vibepygo"
version = "0.1.0"
description = "LLM-interpreted Python"
readme = "README.md"
authors = [
    { name = "qqqqqf", email = "qingf622@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.95.1",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
]
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_python"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
vibepygo = "vibe_python.cli:main"